feat: use aot cache in docker image